--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 # use h2 can have a build in controller console http://localhost:8080/h2-console
-spring.datasource.url=jdbc:h2:mem:ddapitest
+# Using this config doesn't have to register h2 servlet.
+spring.datasource.platform=hsqldb
+spring.jpa.show-sql=true
+#only used for local development as it drops the schema at the end of the session
+#for production, this would be set to "validate" validate the schema, makes no changes to the database
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:h2:mem:dd_api_test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
+
 #'LEVEL' is one of TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF.
 logging.level.root=DEBUG
 logging.level.org.springframework.web=DEBUG
